--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crafty Organix</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -16,10 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript" src="./js/home.js"></script>
   </head>
   <body>
     <section id="header">
-      <a href="#"><img src="img/Crafty Logo.png" class="logo" /></a>
+      <a href="#"><img src="./img/Crafty Logo.png" class="logo" /></a>
 
       <div>
         <ul id="navbar">
@@ -38,6 +39,5 @@
       <p>Crafting your curiosity</p>
       <button>Shop Now</button>
     </section>
-    <script src="script.js"></script>
   </body>
 </html>
