--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         <ul id="navbar">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li><a href="cart.html">Shopping Cart</a></li>
+          <li id="sign-out-button"><a>Sign Out</a></li>
         </ul>
       </div>
     </section>
