--- a/register.html
+++ b/register.html
@@ -45,6 +45,7 @@
             </div>
             <button type="submit" class="btn btn-primary" id="register-button">Register</button>
             <br />
+            <p id="error-message"></p>
             <p>Already have an account? <a href="login.html">Login here</a>.</p>
           </form>
         </div>
