--- a/upload.html
+++ b/upload.html
@@ -27,7 +27,7 @@
                 <input type="text" class="form-control" id="description-text" required />
               </div>
               <div class="form-group">
-                <label>Price</label>
+                <label>Integer Price (JMD)</label>
                 <input
                   type="text"
                   class="form-control"
