added shopping cart page

--- a/viewproofs.html
+++ b/viewproofs.html
@@ -25,6 +25,7 @@
                         <th scope="col">Total</th>
                         <th scope="col">Image Link</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Delivery Info</th>
                     </tr>
                 </thead>
                 <tbody id="table-body">
