let the owner be able to accept/decline payment proofs

--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="cart.html" class="active">Shopping Cart</a></li>
-          <li id="sign-out-button"><a>Sign Out</a></li>
+          <li id="sign-out-button" href=""><a>Sign Out</a></li>
         </ul>
       </div>
     </div>
