--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="cart.html">Shopping Cart</a></li>
-          <li id="sign-out-button"><a>Sign Out</a></li>
+          <li id="sign-out-button"><a href="">Sign Out</a></li>
         </ul>
       </div>
     </section>
