--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html" class="active">Products</a></li>
             <li><a href="cart.html">Shopping Cart</a></li>
-            <li id="sign-out-button"><a>Sign Out</a></li>
+            <li id="sign-out-button"><a href="">Sign Out</a></li>
           </ul>
         </div>
       </div>
