--- a/viewproofs.html
+++ b/viewproofs.html
@@ -26,6 +26,7 @@
                         <th scope="col">Image Link</th>
                         <th scope="col">Status</th>
                         <th scope="col">Delivery Info</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody id="table-body">
