Made final changes

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             <button type="submit" id="login-button">Login</button>
         </div>
         <p id="error-message"></p>
-        <p>Dont have an account? Create one <a href="./register.html">here</a></p>
+        <p>Don't have an account? Create one <a href="./register.html">here</a></p>
     </form>
 </body>
 
